* Updated bcduiApiStubs.js to fit Eclipse Oxygen+Tern and IDEA 2017.2
* HTML JS API docu is now showing source names and lines
* Updated web.xml to reflect an improved default setup

.Major bug fixes:
* I18n: local messages.xml catalog file can contain multi language enabling full i18n support w/o database
* HTML Custom Elements for Safari broke after Safari switched to Webcomponents API v1

.Backward Incompatibilities:

* Menu: when using old scss themes, you need to specify '{ bcdui: { legacyTheme: true } }' in bcdui/conf/settings.json
* jQueryMobile is not compatible with jQuery 3.x anymore. When using jQueryMobile, you need to build bcdui with a jQuery 2.x
* bcd_virtualFileSystem got additional columns updatedBy, last_update, bcd_userId with additional writebacks and security constraints and a new additional key column
* Component: cube/scorecard blindUpDowns, ranking require new i18n keys (bcd_Rank_, bcd_Sc_Blind_, bcd_Cb_Blind_)
* Charts: Moved VML drawer to BCD-UI-DE
* Updated 3rd party jars (apache commons etc) to latest versions
* Cube: for templateManager, RankingEditor or Summary, you need to include bcduiComponent in addition to bcduiCube. Symptom: _renderSummaryArea is undefined
** CubeContextMenu, Sort Measre is replaced by Column Sorting, when using custom context menus, remove calls to setSortMeasure, add calls to setColumnSort
** If a template is selected and then maually modified later, cube:Layout/@name and @description attributes are appeded with ' - '+bcd_Edit_Modified
* Export: removed bcdui.component.exports.excel functions (detailExport, exportHTMLElement). Use bcdui.component.exports detailExport, exportWysiwygAsExcel functions.
* New entries for Eclipse injection to support ECMA5 transpiled sources, see Docu/development/eclipseInjected.xml
* Widgets: navpath generation is turned off by default, use widget's enableNavPath attribute to turn it on
* menu.xml: "bcdTranslate" attribute dropped, use "caption" instead
* I18n